# AmmoEnchanting

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
data/: AmmoEnchanting.esp  AmmoEnchanting_ExoticArrows.esp  AmmoEnchanting_ImprovedBonemold-RCBE.esp  AmmoEnchanting_KID.ini  AmmoEnchanting_RCBE.esp
data/Interface/Translations/: AmmoEnchanting_ENGLISH.txt
data/Meshes/AmmoEnchanting/: FireArrowFX.nif  FireQuiverFX.nif  FrostArrowFX.nif  FrostQuiverFX.nif  ShockArrowFX.nif  ShockQuiverFX.nif
data/SKSE/Plugins/: AmmoEnchanting.ini
data/fomod/: ModuleConfig.xml  info.xml
scripts/: AmmoEnchanting.psc
src/Data/: CreatedObjectManager.Serialization.cpp  CreatedObjectManager.cpp  CreatedObjectManager.h  EnchantArtManager.cpp  EnchantArtManager.h
src/Ext/: AmmoEnchantmentController.cpp  AmmoEnchantmentController.h  ArrowEffectController.cpp  ArrowEffectController.h  EnchantConstructMenu.cpp  EnchantConstructMenu.h  ExtraDataList.cpp  ExtraDataList.h  NiAVObject.cpp  NiAVObject.h  TESAmmo.cpp  TESAmmo.h  TESObjectREFR.cpp  TESObjectREFR.h  TaskQueueInterface.cpp  TaskQueueInterface.h
src/Hooks/: Disenchant.cpp  Disenchant.h  Enchanting.cpp  Enchanting.h  FilterFlags.cpp  FilterFlags.h  Gameplay.cpp  Gameplay.h  Misc.cpp  Misc.h  SkyUI.cpp  SkyUI.h  VFX.cpp  VFX.h
src/PCH/: PCH.h
src/Papyrus/: AmmoEnchanting.cpp  AmmoEnchanting.h
src/RE/: AmmoHUDData.h  BGSCreatedObjectManager.cpp  BGSCreatedObjectManager.h  BGSSaveLoadGame.cpp  BGSSaveLoadGame.h  BSResource.cpp  BSResource.h  Offset.h
src/SKSEPlugin/: SKSEPlugin.cpp
src/Serialization/: Serialization.cpp  Serialization.h
src/Settings/: GlobalSettings.cpp  GlobalSettings.h  INISettings.cpp  INISettings.h
src/Translation/: Translation.cpp  Translation.h
